--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
-
+    <!--------------- HEADER --------------->
     <header class="header">
 
         <div class="container container--flex">
@@ -34,7 +32,7 @@
                 </ul>
             </nav>
 
-            <!-- Mobile menu -->
+            <!-------- MOBILE MENU -------->
 
             <button type="submit" class="menu" data-menu-open>
                 <svg class="menu__icon" width="40" height="40">
